# learning_axum

./: README.md
data/: .env  Cargo.toml
data/src/: lib.rs  main.rs
data/src/database/: mod.rs  prelude.rs  tasks.rs  users.rs
data/src/routes/: create_task.rs  create_user.rs  delete_task.rs  get_tasks.rs  guard.rs  mod.rs  partial_update_task.rs  update_tasks.rs
data/src/utils/: app_errors.rs  jwt.rs  mod.rs
hello_world/: Cargo.toml  docker-compose.yml
hello_world/src/: lib.rs
hello_world/src/routes/: always_errors.rs  custom_json_extractor.rs  get_json.rs  hello_world.rs  middleware_custom_message.rs  middleware_message.rs  mirror_body_json.rs  mirror_body_string.rs  mirror_user_agent.rs  mirror_user_header.rs  mod.rs  path_variables.rs  query_params.rs  returns_201.rs  set_middleware_custom_headers.rs  validate_with_serder.rs
