[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.17", features = ["headers"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["cors"] }
validator = { version = "0.16.0", features = ["derive"] }
